fixed the issue with the collapsable hidden segment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: "Poppins", sans-serif;
     margin: 0;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -117,13 +119,13 @@ h1 {
     flex-direction: column;
     justify-content: center;
     margin: auto;
-    max-width: 840px;
+    max-width: 800px;
 }
 
 .hello {
     margin: 0;
     padding-top: 1vh;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 300;
     color: #333;
     animation-name: darken;
@@ -136,9 +138,44 @@ h1 {
     100% {color: #333;}
 }
 
+#skill-area {
+    display: flex;
+    flex-direction: column;
+    font-size: 26px;
+}
+
 #treadmill {
     display: flex;
     overflow: hidden;
+    cursor: pointer;
+}
+
+#treadmill:hover {
+    background-color: #fcfcfc;
+}
+
+.details {
+    margin: 0;
+    margin-top: 3vh;
+    padding: 0;
+    max-height: 0;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    transition: max-height 0.4s ease-out;
+}
+
+.deet {
+    margin: auto;
+    max-width: 800px;
+    font-weight: 300;
+}
+
+.topy {
+    margin-top: 10px;
+}
+
+.lopy {
+    margin-bottom: 10px;
 }
 
 .skills {
@@ -172,7 +209,7 @@ li {
 }
 
 #pages {
-    margin-top: 60px;
+    margin-top: 3vh;
     display: flex;
     justify-content: center;
 }
@@ -357,14 +394,22 @@ li {
         font-size: 15px;
     }
 
+    #skill-area {
+        font-size: 16px;
+    }
+    
+    .skills {
+        margin: 10px 0;
+    }
+
+    .details {
+        padding: 0 20px;
+    }
+
     #pages {
         margin: 15px 0;
         flex-direction: column;
         align-items: center;
-    }
-
-    .skills {
-        margin: 10px 0;
     }
 
     #page-1 {
